﻿v9.4
-----


v9.3
-----
+ Added the ability to sort wishlists by review scores, which will display the highest rated items first
+ Added some behind the scenes updates to OpenCritic reviews, should now display correctly on all pages
+ Added DRM warnings, price history information, and SteamDB links to bundle pages
: Updated SteamRep section on profile pages to use updated API and safer code
: Updated market code so that an items lowest price is shown on subsequent pages
: Updated stores used in price comparisons (removed 6 legacy stores, added 4 new stores)
: Fixed a bug where Steam Card Exchange links would not display properly on store pages
: Fixed a bug where the Ukraine region had an incorrect ISO code
: Fixed a bug where SteamDB links were not correctly formed on some pages
- Removed market section totals as they conflicted with new market page updates

v9.2
-----
+ Added Steam review rating scores to users wishlists
+ Added OpenCritic.com reviews to store pages
+ Added a button to toggle live market updates for popular items on or off
+ Added a confirmation dialog when emptying your shopping cart
+ Add to Cart buttons will now display on larger wishlists
+ Added a "View badge progress" button to booster packs in inventory and on trading cards in market
+ Added an option for viewing user's wishlist data on their profile
: Fixed a bug that caused other users inventory to not load price information under some circumstances
: Updated age gate bypass to work with additional new age gate types
: Fixed Steam store main menu dropdowns not being hidden on mouse out
: Fixed issues on homepage when hiding the sidebar at some zoom levels and lower resolutions
: Improved performance on store pages for users with large purchase histories
: Fixed a bug where emoticons weren't correctly highlighted as owned on market pages
: Fixed a bug in custom holiday profile themes that effected legitimate users of that theme