@@ -102,8 +102,6 @@
     "drop_calc": "Click here to calculate drops remaining",
     "price": "Price",
     "view_marketplace": "View Marketplace",
-    "empty_cart": "Empty Cart",
-    "empty_cart_confirmation": "Are you sure you want to empty the shopping cart?",
     "market_transactions": "Market Transactions",
     "card_drops_remaining": "__drops__ card drops remaining",
     "badges_drops": "Badges With Card Drops Remaining",
