@@ -1,5 +1,10 @@
 ﻿v9.4
 -----
+: Fixed a bug that caused some market items not to display features correctly in user's inventories
+: Fixed a bug that caused market sorting options to disappear when paginating
+: Updated wishlist emptying feature to work with larger wishlists and be more robust in general
+: Fixed a timing issue when leaving multiple groups at once
+- Removed Empty Cart feature as this feature is now part of Steam and is therefore redundant
 
 
 v9.3
